# toiletpaper-rs

./: Cargo.toml  README.md
migrations/2020-12-22-233416_create_stock/: down.sql  up.sql
migrations/2020-12-29-213003_add_store_number_to_stock/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
