[package]
name = "toiletpaper"
version = "0.1.0"
authors = ["Lucas Hecht <lucas-hecht@agdsn.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.19"
rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket" } # for async routes
